src/objects/PaymentPlan__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <description>If Start Date&lt;=TODAY=&lt;End Date , then Active, else Inactive</description>
        <formula>AND( TODAY()  &gt;=  StartDate__c , TODAY()  &lt;=  EndDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractOrder__c</fullName>
        <description>Look up to Contract</description>
        <label>Contract/Order</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Payment Plans</relationshipLabel>
        <relationshipName>PaymentPlans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DayOfMonth__c</fullName>
        <label>Day Of Month</label>
        <picklist>
            <picklistValues>
                <fullName>1st</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4th</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DayOfWeek__c</fullName>
        <label>Day Of Week</label>
        <picklist>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NumberOfInstalments__c</fullName>
        <description>Max number of the installments from the payment plan type. Can be edited by the agent. Limited by Last Installment Date ( Payment Plan Type)</description>
        <label>Number Of Instalments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymentFrequency__c</fullName>
        <description>(Copy the value from Payment Frequency from related Payment Plan Type record)
Should this be on the payment plan type object in order to set the instalment schedule records</description>
        <formula>TEXT(PaymentPlanType__r.PaymentFrequency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentPlanType__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>look up to the Payment Plan Type object</description>
        <label>Payment Plan Type</label>
        <referenceTo>PaymentPlanType__c</referenceTo>
        <relationshipLabel>Payment Plans</relationshipLabel>
        <relationshipName>PaymentPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlanAmount__c</fullName>
        <description>Calculated by a budget calculation. For MP1, it&apos;s just going to be a flat amount, not a calculated amount.
Including the Amount Due (after MP1)</description>
        <inlineHelpText>The intitial recommended amount</inlineHelpText>
        <label>Plan Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TotalInstalmentAmount__c</fullName>
        <inlineHelpText>Sum of the total value of instalments</inlineHelpText>
        <label>Total Instalment Amount</label>
        <summarizedField>Instalment__c.InstalmentAmountDue__c</summarizedField>
        <summaryForeignKey>Instalment__c.PaymentPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Payment Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PPN-{0000000000}</displayFormat>
        <label>Payment Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DayOfMonthShouldBeBlank</fullName>
        <active>true</active>
        <description>Day of Month should be blank if Payment Frequency if Weekly, Fortnightly, or Yearly</description>
        <errorConditionFormula>AND((PaymentFrequency__c &lt;&gt; &apos;Monthly&apos;) , NOT(ISPICKVAL( DayOfMonth__c ,&apos;&apos;)) )</errorConditionFormula>
        <errorMessage>Day of Month should be blank if Payment Frequency is Weekly, Fortnightly, Yearly.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DayOfWeekShouldBeBlank</fullName>
        <active>true</active>
        <description>Day of week should be blank if Payment Frequency is Monthly or Yearly</description>
        <errorConditionFormula>AND((PaymentFrequency__c = &apos;Monthly&apos; || PaymentFrequency__c = &apos;Yearly&apos;),  NOT(ISPICKVAL( DayOfWeek__c ,&apos;&apos;)))</errorConditionFormula>
        <errorMessage>Day of Week should be blank if Payment Frequency is Monthly or Yearly.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PaymentPlaEndDatecannotbeBeforeStartDate</fullName>
        <active>true</active>
        <description>End Date can not be before Start Date</description>
        <errorConditionFormula>StartDate__c &gt;= EndDate__c</errorConditionFormula>
        <errorDisplayField>EndDate__c</errorDisplayField>
        <errorMessage>End Date cannot be before Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PaymentPlanEndDateMustBeBeforeStartDate</fullName>
        <active>true</active>
        <description>The End date cannot be before the Start Date</description>
        <errorConditionFormula>EndDate__c  &lt;  StartDate__c</errorConditionFormula>
        <errorMessage>End Date must be greater than equal to Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequiredDayOfMonth</fullName>
        <active>true</active>
        <description>Day of month field is required If Payment Frequency is Monthly;</description>
        <errorConditionFormula>AND(PaymentFrequency__c=&apos;Monthly&apos;,ISPICKVAL( DayOfMonth__c ,&apos;&apos;))</errorConditionFormula>
        <errorDisplayField>DayOfMonth__c</errorDisplayField>
        <errorMessage>Day of Month is required If Payment Frequency is Monthly</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequiredDayOfWeek</fullName>
        <active>true</active>
        <description>Day of week is required If Payment Frequency is Weekly or Fortnightly.</description>
        <errorConditionFormula>AND((PaymentFrequency__c  =  &apos;Weekly&apos; ||   PaymentFrequency__c  =  &apos;Fortnightly&apos;), ISPICKVAL(  DayOfWeek__c ,&apos;&apos;))</errorConditionFormula>
        <errorDisplayField>DayOfWeek__c</errorDisplayField>
        <errorMessage>Day of Week is required If Payment Frequency is Weekly or Fortnightly.</errorMessage>
    </validationRules>
</CustomObject>